--- a/templates/main.html
+++ b/templates/main.html
@@ -34,7 +34,12 @@
                     <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
                     <form action="/urls" method="post" class="row">
                         <div class="col-8">
-                            <input type="text" name="url[name]" value="" class="form-control form-control-lg" placeholder="https://www.example.com" required>
+                            <input type="text" name="url[name]" value="" class="form-control form-control-lg {% if errors['name'] %} is-invalid {% endif %}" placeholder="https://www.example.com" required>
+                            {% if errors['name'] %}
+                                <div class="invalid-feedback">
+                                    Некорректный URL
+                                </div>
+                            {% endif %}
                         </div>
                         <div class="col-2">
                             <input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
