--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/">Анализатор страниц</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" href="/">Главная</a>
-                  <a class="nav-link" href="#">Сайты</a>
+                <a class="navbar-brand" href="/">Анализатор страниц</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" href="/">Главная</a>
+                        <a class="nav-link" href="/urls">Сайты</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <main>
         {% if messages.success %}
-            <div class="alert alert-success" role="alert">
-                {{ messages.success.0 }}
-            </div>
+        <div class="alert alert-success" role="alert">
+            {{ messages.success.0 }}
+        </div>
         {% endif %}
-
         {% if messages.unsuccess %}
-            <div class="alert alert-warning" role="alert">
-                {{ messages.unsuccess.0 }}
-            </div>
+        <div class="alert alert-warning" role="alert">
+            {{ messages.unsuccess.0 }}
+        </div>
         {% endif %}
         <div class="container-lg mt-3">
             {% include template %}
         </div>
     </main>
-    <footer class="mt-5 py-3 border-top fixed-bottom">
+    <footer class="mt-5 py-3 border-top fixed-bottom bg-dark">
         <div class="container-lg">
             <div class="text-center">
                 <a href="https://github.com/Ivan-Lysenko/php-project-9" target="_blank">Source code</a>
             </div>
         </div>
     </footer>
-    <div id="wt-sky-root"></div>
 </body>
+
 </html>
