--- a/templates/main.html
+++ b/templates/main.html
@@ -5,11 +5,13 @@
         <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
         <form action="/urls" method="post" class="row">
             <div class="col-8">
-                <input type="text" name="url[name]" class="form-control form-control-lg {% if errors['name'] %} is-invalid {% endif %}" placeholder="https://www.example.com" required value="{{ name }}">
+                <input type="text" name="url[name]"
+                    class="form-control form-control-lg {% if errors['name'] %} is-invalid {% endif %}"
+                    placeholder="https://www.example.com" required value="{{ name }}">
                 {% if errors['name'] %}
-                    <div class="invalid-feedback">
-                        Некорректный URL
-                    </div>
+                <div class="invalid-feedback">
+                    Некорректный URL
+                </div>
                 {% endif %}
             </div>
             <div class="col-2">
@@ -18,4 +20,3 @@
         </form>
     </div>
 </div>
-
