--- a/templates/urls.html
+++ b/templates/urls.html
@@ -1,24 +1,26 @@
 <h1>Сайты</h1>
 <div class="table-responsive">
     <table class="table table-bordered table-hover text-nowrap" data-test="urls">
-        <tbody>
+        <thead>
             <tr>
                 <th>ID</th>
                 <th>Имя</th>
                 <th>Последняя проверка</th>
                 <th>Код ответа</th>
             </tr>
+        </thead>
+        <tbody>
             {% for url in sites %}
-                <tr>
-                    <td>{{ url.id }}</td>
-                    <td>
-                        <a href="/urls/{{ url.id }}">
+            <tr>
+                <td>{{ url.id }}</td>
+                <td>
+                    <a href="/urls/{{ url.id }}">
                         {{ url.name }}
-                        </a>
-                    </td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                    </a>
+                </td>
+                <td>{{ url.last_check }}</td>
+                <td>{{ url.status_code }}</td>
+            </tr>
             {% endfor %}
         </tbody>
     </table>
