--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
         </div>
         {% endif %}
         {% if messages.unsuccess %}
-        <div class="alert alert-warning" role="alert">
+        <div class="alert alert-danger" role="alert">
             {{ messages.unsuccess.0 }}
         </div>
         {% endif %}
