--- a/templates/url.html
+++ b/templates/url.html
@@ -23,17 +23,15 @@
     <button type="submit" class="btn btn-primary">Запустить проверку</button>
   </form>
   <table class="table table-bordered table-hover" data-test="checks">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Код ответа</th>
-        <th>h1</th>
-        <th>title</th>
-        <th>description</th>
-        <th>Дата создания</th>
-      </tr>
-    </thead>
     <tbody>
+      <tr>
+        <td>ID</td>
+        <td>Код ответа</td>
+        <td>h1</td>
+        <td>title</td>
+        <td>description</td>
+        <td>Дата создания</td>
+      </tr>
       {% for check in checks %}
       <tr>
         <td>{{ check.id }}</td>
