--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,14 +10,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        main {
+            flex: 1;
+        }
+        footer {
+            margin-top: auto;
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Анализатор страниц</a>
+                <a class="navbar-brand" href="/page-analyzer">Анализатор страниц</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -25,8 +40,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" href="/">Главная</a>
-                        <a class="nav-link" href="/urls">Сайты</a>
+                        <a class="nav-link active" href="/page-analyzer">Главная</a>
+                        <a class="nav-link" href="/page-analyzer/urls">Сайты</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +67,7 @@
             {% include template %}
         </div>
     </main>
-    <footer class="mt-5 py-3 border-top fixed-bottom bg-dark">
+    <footer class="mt-5 py-3 border-top bg-dark">
         <div class="container-lg">
             <div class="text-center">
                 <a href="https://github.com/abstract-point/page_analyzer" target="_blank">Source code</a>
