--- a/templates/urls.html
+++ b/templates/urls.html
@@ -12,7 +12,7 @@
             <tr>
                 <td>{{ url.id }}</td>
                 <td>
-                    <a href="/urls/{{ url.id }}">
+                    <a href="/page-analyzer/urls/{{ url.id }}">
                         {{ url.name }}
                     </a>
                 </td>
