--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/page-analyzer">Анализатор страниц</a>
+                <a class="navbar-brand" href="/">Анализатор страниц</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -40,8 +40,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" href="/page-analyzer">Главная</a>
-                        <a class="nav-link" href="/page-analyzer/urls">Сайты</a>
+                        <a class="nav-link active" href="/">Главная</a>
+                        <a class="nav-link" href="/urls">Сайты</a>
                     </div>
                 </div>
             </div>
