--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
     <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
         <h1 class="display-3">Анализатор страниц</h1>
         <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
-        <form action="/page-analyzer/urls" method="post" class="row">
+        <form action="/urls" method="post" class="row">
             <div class="col-12 col-md-8">
                 <input type="text" name="url[name]"
                     class="form-control form-control-lg {% if errors['name'] %} is-invalid {% endif %}"
