--- a/templates/url.html
+++ b/templates/url.html
@@ -18,7 +18,7 @@
   </table>
 </div>
 <h2 class="mt-5 mb-3">Проверки</h1>
-  <form action="/page-analyzer/urls/{{ site.id }}/checks" method="POST" class="mb-3">
+  <form action="/urls/{{ site.id }}/checks" method="POST" class="mb-3">
     <input type="hidden" value="{{ site.name }}" name="url[name]">
     <button type="submit" class="btn btn-primary">Запустить проверку</button>
   </form>
